--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,8 @@
 runtime: python39
 
 handlers:
-- url: /static
-  static_dir: static-files
-  
+- url: /s
+  static_dir: static-files-folder
+
 - url: /.*
   script: auto
